--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+/* RESET */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
+    background: transparent;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    vertical-align: baseline;
+    outline: none;
+}
 html,body{
     margin: 0px;
     padding: 0px;
@@ -21,7 +31,7 @@ span{
     color: #E3872D;
 }
 section{
-    margin-left: 303px;
+    margin-left: 300px;
 }
 /* SHORT-CUT */
 .d_flex{
@@ -29,6 +39,9 @@ section{
 }
 .jus_con_cen{
     justify-content: center;
+}
+.al_it_cen{
+    align-items:center;
 }
 
 /* HEADER */
@@ -157,6 +170,7 @@ header .profile .container .profilehead p{
 .aboutme{
     height: 100vh;
     padding: 100px 50px;
+    margin-bottom:100px;
 }
 .aboutme .aboutmeheader{
     position: relative;
@@ -255,4 +269,392 @@ header .profile .container .profilehead p{
 }
 .aboutme .container .button2 a:first-child{
     margin-right: 30px;
+}
+
+/* SECTION ABILITIES */
+.abilities{
+    padding: 100px 50px;
+    margin-bottom:100px;
+    background-color: #f6f7fd;
+}
+.abilities .col40{
+    width: 40%;
+    padding-right: 80px;
+}
+.abilities .col60{
+    width: 60%;
+}
+.abilities .myabilities h4{
+    line-height: 1;
+    margin-bottom: 18px;
+    font-size: 24px;
+}
+.abilities .myabilities p{
+    font-family: "Open Sans";
+    font-size: 14px;
+    line-height: 1.8;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+}
+.abilities .progress ul li{
+    margin-bottom: 10px;
+}
+.abilities .progress .info{
+    display: flex;
+    justify-content: space-between;
+}
+.abilities .progress .info p{
+    font-size: 13px;
+    font-family: "Open Sans";
+    font-weight: 700;
+}
+.abilities .progress .scale{
+    height:4px;
+    width:100%;
+    background-color: rgb(197, 194, 194);
+    border-radius: 3px;
+    margin-bottom: 15px;
+}
+.abilities .progress .scale .inside95{
+    height:4px;
+    width: 95%;
+    background-color: #000000;
+}
+.abilities .progress .scale .inside85{
+    height:4px;
+    width: 85%;
+    background-color: #000000;
+}
+.abilities .progress .scale .inside75{
+    height:4px;
+    width: 75%;
+    background-color: #000000;
+}
+.abilities .progress .scale .inside90{
+    height:4px;
+    width: 90%;
+    background-color: #000000;
+}
+
+
+
+/* SECTION AMAZING SERVICES */
+.amazingservices{
+    padding: 0px 50px;
+    margin-bottom:100px;
+}
+.amazingservices .amazingheader{
+    position: relative;
+    padding-bottom: 100px;
+}
+.amazingservices .amazingheader::before{
+    position: absolute;
+    content: "";
+    width: 6px;
+    height: 72px;
+    background-color: #E3872D;
+    top: 2px;
+}
+.amazingservices .amazingheader h3{
+    font-size: 50px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: -.5px;
+    padding-left: 25px;
+    line-height: 1;
+}
+.amazingservices .amazingheader p{
+    font-size: 16px;
+    font-family: "Montserrat";
+    padding-left: 25px;
+}
+/* CELL ALL */
+.svg{
+    fill: currentcolor;
+    color:#E3872D
+}
+.cell{
+    margin: 15px 15px;
+    box-shadow: 0 0 20px rgba(0,0,0,.1);
+    padding: 40px 40px 33px 40px;
+    transition: all 0.4s;
+}
+.cell:hover{
+    margin-top:5px;
+}
+.icon{
+    margin-bottom:21px;
+}
+.cell h3{
+    font-family: "Montserrat";
+    font-size: 22px;
+    font-weight: 600;
+    color: #000000;
+    line-height: 2;
+}
+.cell p{
+    font-family: "Open Sans";
+    font-size: 14px;
+    line-height: 1.8;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+}
+
+
+
+/* SECTION CREATIVE WORKS */
+.creativeworks{
+    padding: 0px 50px;
+    margin-bottom:100px;
+}
+.creativeworks .cwheader h3{
+    font-size: 50px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: -.5px;
+    padding-left: 25px;
+    line-height: 1;
+}
+.creativeworks .cwheader p{
+    font-size: 16px;
+    font-family: "Montserrat";
+    padding-left: 25px;
+}
+.creativeworks .cwheader{
+    position: relative;
+}
+.creativeworks .cwheader::before{
+    position: absolute;
+    content: "";
+    width: 6px;
+    height: 72px;
+    background-color: #E3872D;
+    top: 2px;
+}
+.creativeworks .imggroup ul{
+    padding-top:90px;
+    margin-bottom: 15px;
+
+}
+.creativeworks .imggroup ul li{
+    margin-left: 30px;
+}
+.creativeworks .imggroup ul li a{
+    font-family: "Open Sans";
+    font-size: 14px;
+    font-weight: 700;
+    color: #000;
+}
+.creativeworks .imggroup ul li:first-child{
+    margin-left: 15px;
+}
+.creativeworks .col{
+    margin: 15px;
+    width: 33.3333%;
+}
+
+
+.creativeworks .conserv{
+    height:330px;
+    background-image: url(../img/conserv.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.creativeworks .bottle{
+    height:330px;
+    background-image: url(../img/bottle.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.creativeworks .paperbag{
+    height:330px;
+    background-image: url(../img/baberbag.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.creativeworks .cups{
+    height:330px;
+    background-image: url(../img/twocups.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.creativeworks .flyer{
+    height:330px;
+    background-image: url(../img/flyer.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.creativeworks .bag{
+    height:330px;
+    background-image: url(../img/bag.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+
+/* SECTION INDICATOR */
+.indicator{
+    margin-bottom: 100px;
+}
+.indicator .parallax{
+    height: 450px;
+    background-image: url(../img/parallax.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-blend-mode: overlay;
+    background-color: #010b20cc;  
+}
+.indicator .parallax .parallaxcontent{
+  color: #fff;
+  width: 60%;
+  text-align: center;
+}
+.indicator .parallax .parallaxcontent h3{
+    color: #fff;
+    font-size: 27px;
+    font-family: "Montserrat";
+    font-weight: 600;
+    line-height: 1.4;
+}
+.indicator .parallax .parallaxcontent p{
+    margin-top: 30px;
+    color: #fff;
+    font-size: 18px;
+    font-family: "Montserrat";
+}
+.box{
+    text-align:center;
+    width:25%;
+    border-left: 1px solid rgba(102, 102, 102, 0.404);
+    padding: 50px 0px;
+    margin-top: 30px;
+}  
+.box h3{
+    font-size: 40px;
+    font-weight: 700;
+}
+.box p{
+    color: #666;
+    font-family: "Open Sans";
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 10px;
+}
+.box:first-child{
+    border-left: none;
+}    
+
+
+
+/* SECTION LATEST NEWS */
+.latestnews{
+    padding: 100px 50px;
+    margin-bottom:100px;
+    position: relative;
+    background-color: #f6f7fd;
+}
+.latestnews .lnheader{
+    padding-bottom: 100px;
+}
+.latestnews .lnheader h3{
+    font-size: 50px;
+    text-transform: uppercase;
+    font-weight: 600;
+    letter-spacing: -.5px;
+    padding-left: 25px;
+    line-height: 1;
+}
+.latestnews .lnheader p{
+    font-size: 16px;
+    font-family: "Montserrat";
+    padding-left: 25px;
+}
+.latestnews .lnheader::before{
+    content: "";
+    width: 6px;
+    height: 72px;
+    background-color: #E3872D;
+    position: absolute;
+    top: 102px;
+}
+.latestnews .col{
+    background-color: #fff;
+    margin: 0px 15px;
+    padding-bottom: 45px;
+}
+
+.latestnews .logos .logosimg{
+    height:200px;
+    background-image: url(../img/logos.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.latestnews .logos .illustratorimg{
+    height:200px;
+    background-image: url(../img/illustrator.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.latestnews .logos .brandingimg{
+    height:200px;
+    background-image: url(../img/branding.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.latestnews .logos .logoscontent h4{
+    margin-top: 40px;
+    margin-bottom: 15px;
+    font-size: 14px;
+    color: #333;
+    font-family: "Montserrat";
+    font-weight: 600;
+}
+.latestnews .logos .logoscontent a h3{
+    color: #041230;
+    font-size: 22px;
+    margin-bottom: 18px;
+}
+.latestnews .logos .logoscontent p{
+    font-family: "Open Sans";
+    font-size: 14px;
+    line-height: 1.8;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+    margin-bottom:26px;
+}
+.latestnews .logos .logoscontent,.readmore{
+    padding: 0px 30px;
+}
+.latestnews .logos .readmore a{
+    background-color: #E3872D;
+    color: #fff;
+    padding: 12px 35px;
+    border-radius: 3px;
+    font-size: 14px;
+}
+
+
+/* FOOTER */
+footer{
+    margin-left: 300px;
+    background-color: #041230;
+}
+footer .footcontainer{
+    padding: 50px 0px;
+    padding-left: 30px;
+}
+footer .footcontainer p{
+    color: #fff;
 }
